--- a/TPAjedrez/TPAjedrez.csproj
+++ b/TPAjedrez/TPAjedrez.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClasesAjedrezPractica1\ClasesAjedrezPractica1.csproj" />
+  </ItemGroup>
+
 </Project>
